fix bug item group name too long and update view group code popup

--- a/src/groups/View.scss
+++ b/src/groups/View.scss
@@ -314,8 +314,8 @@
 		}
 
 		.group-item-left {
-			max-width: 188px;
-			min-width: 188px;
+			max-width: 40%;
+			min-width: 40%;
 			height: 200px;
 
 			img {
@@ -325,7 +325,7 @@
 		}
 
 		.group-item-right {
-			width: 100%;
+			width: 60%;
 		}
 	}
 }
